Fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -122,14 +122,14 @@ h1 {
   border-bottom: 2px solid #8dc25f;
 }
 
-.ad {
+.footer-b {
   z-index: 1;
+  width: 84%;
   background-color: #111113;
-  width: 100%;
   color: #efefef;
   font-weight: 700;
   padding: 30px;
-  text-align: right;
+  text-align: center;
 }
 
 @media only screen and (min-width: 38em) {
